# marketingdashboard

./: .env.example  .gitignore  DEPLOY-QUICK-START.md  DEPLOYMENT-SUMMARY.txt  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  FINAL_UPDATES.md  GOOGLE_ADS_SCRIPT_SETUP.md  GOOGLE_APPS_SCRIPT_5MIN_SETUP.md  Google_Ads_API_Design_Documentation.md  ONBOARDING-SUMMARY.txt  ONBOARDING.md  PASSWORD-MANAGEMENT.md  PDF_INSTRUCTIONS.txt  PRE-DEPLOY-CHECKLIST.md  QUICKSTART.md  README.md  README_QUICK_START.md  SECURITY.md  SHOPIFY_BROWSER_SETUP.md  SHOPIFY_INTEGRATION_SUMMARY.md  SHOPIFY_SETUP.md  SOLUTION_SUMMARY.md  check-secrets.sh  convert-to-pdf.sh  deploy-production.sh  deploy-quick.sh  deploy-simple.sh  deploy.sh  docker-compose.yml  generate-password-hash.py  generate_pdf.py  google-ads-script.js  nginx-ssl.conf  server-manage.sh  set-password.sh  set-remote-password.sh  setup-nginx-ssl.sh  shopify-export-script.js
backend/: .coverage  .dockerignore  .env.example  Dockerfile  coverage.xml  pyproject.toml  pytest.ini  setup.cfg
backend/app/: __init__.py  auth.py  background_tasks.py  config.py  database.py  db.py  main.py
backend/app/models/: __init__.py  campaign.py  settings.py  shipping.py
backend/app/routers/: __init__.py  campaigns.py  meta.py  meta_bulk_generator.py  products.py  script_config.py  settings.py  shipping.py  shopify.py  shopify_proxy.py  sync.py
backend/app/services/: __init__.py  base.py  google_ads.py  meta_image_upload.py  settings_manager.py
backend/tests/: conftest.py
backend/tests/unit/: test_auth.py  test_background_tasks.py  test_database.py  (+11 more)
(+31 files in other folders)
